old slurm/slurm-5370.out
clang++ -std=c++14 -stdlib=libc++ -O3 -ferror-limit=2 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-sign-conversion -Wno-exit-time-destructors -Wno-float-equal -Wno-global-constructors -Wno-missing-declarations -Wno-unused-parameter -Wno-padded -Wno-shadow -Wno-weak-vtables -Wno-missing-prototypes -Wno-unused-variable -ferror-limit=1 -Wno-deprecated -Wno-conversion -Wno-double-promotion -c src/direct_cuda_pattern.cc -o ./obj/direct_cuda_pattern.o -Iinclude -I/usr/local/cuda/include -I/usr/local/include -I/usr/include/c++/v1
In file included from src/direct_cuda_pattern.cc:3:
include/f/cuda_pattern/cuda_pattern.hpp:211:322: warning: expression result unused [-Wunused-value]
            make_pattern_intensity_diff( data.weights,         data.ug,                         data.ar,         data.diag, config.thickness,               data.dim,          data.I_exp,        data.I_diff,         config.column_index,          data.cache,        config.tilt_size,        config.max_dim),         config.per_tilt_dim_vector,         config.per_tilt_dim_cache);  
                                                                                                                                                                                                                                                                                                                          ~~~~~~ ^~~~~~~~~~~~~~~~~~~
include/f/cuda_pattern/cuda_pattern.hpp:211:376: error: extraneous ')' before ';'
            make_pattern_intensity_diff( data.weights,         data.ug,                         data.ar,         data.diag, config.thickness,               data.dim,          data.I_exp,        data.I_diff,         config.column_index,          data.cache,        config.tilt_size,        config.max_dim),         config.per_tilt_dim_vector,         config.per_tilt_dim_cache);  
                                                                                                                                                                                                                                                                                                                                                                                       ^
include/f/cuda_pattern/cuda_pattern.hpp:211:358: warning: expression result unused [-Wunused-value]
            make_pattern_intensity_diff( data.weights,         data.ug,                         data.ar,         data.diag, config.thickness,               data.dim,          data.I_exp,        data.I_diff,         config.column_index,          data.cache,        config.tilt_size,        config.max_dim),         config.per_tilt_dim_vector,         config.per_tilt_dim_cache);  
                                                                                                                                                                                                                                                                                                                                                              ~~~~~~ ^~~~~~~~~~~~~~~~~~
2 warnings and 1 error generated.
Makefile:28: recipe for target 'direct_cuda_pattern' failed
make: *** [direct_cuda_pattern] Error 1

per tilt0
3
per tilt1
6
per tilt2
9
per tilt3
14
per tilt4
17Merit: 1.68124e-05

real	0m0.887s
user	0m0.188s
sys	0m0.656s
